<resources>
    <string name="app_name">NiagaNow</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_back_mary_here_s_your_business_overview">Welcome back, Mary! Here\'s your business overview.</string>
    <string name="us_english">us English</string>
    <string name="notification_bell">Notification bell</string>
    <string name="rm_1_245_25">RM 1,245.25</string>
    <string name="income_overview">Income Overview</string>
    <string name="previous_daily_rm_1_180_50">Previous Daily: RM 1,180.50</string>
    <string name="peak_transaction_times">Peak Transaction Times</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_and_manage_your_transaction_history">View and manage your transaction history</string>
    <string name="export_pdf">Export PDF</string>
    <string name="id">ID</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="loan_title">Loan Title</string>
    <string name="loan_description">Loan description</string>
    <string name="interest_rate_5_5_8_5">Interest Rate: 5.5% - 8.5%</string>
    <string name="max_amount_rm50_000">Max Amount: RM50,000</string>
    <string name="tenure_12_36_months">Tenure: 12 - 36 months</string>
    <string name="key_features">Key Features:</string>
    <string name="no_collateral_required">✔ No collateral required</string>
    <string name="quick_approval">✔ Quick approval</string>
    <string name="flexible_repayment">✔ Flexible repayment</string>
    <string name="apply_now">Apply Now</string>
    <string name="loans">Loans</string>
    <string name="check_your_loan_eligibility">Check Your Loan Eligibility</string>
    <string name="complete_our_quick_assessment_to_see_if_you_qualify_for_a_business_loan">Complete our quick assessment to see if you qualify for a business loan</string>
    <string name="start_eligibility_check">Start Eligibility Check</string>
</resources>